# GoogleTest-CMake-Examples

./: CMakeLists.txt  README.md
docker/: googletest.Dockerfile
examples/: CMakeLists.txt
examples/math/: CMakeLists.txt
examples/math/include/: math.hpp
examples/math/src/: math.cpp
examples/math/tests/: CMakeLists.txt
examples/math/tests/add_test/: CMakeLists.txt  add_test.cpp
examples/math/tests/subtract_test/: CMakeLists.txt  subtract_test.cpp
